# serializer version: 1
# name: EditUserInfoViewTest.test_edit_without_title[missing title warning with phone and address]
  '''
  <div class="alert alert-warning" id="missing-infos-warning" role="status">
                                  <div class="row">
                                      <div class="col-auto pe-0">
                                          <i class="ri-information-line ri-xl text-warning"></i>
                                      </div>
                                      <div class="col">
                                          <p class="mb-2">
                                              <strong>Informations manquantes</strong>
                                          </p>
                                          <p>Une ou plusieurs informations de votre profil sont nécessaires pour utiliser votre espace candidat.</p>
                                          <p class="mb-0">
                                              Les champs suivants ne sont pas renseignés :
                                              </p><ul>
                                                  
                                                      
                                                  
                                                      
                                                          <li>
                                                              <strong>Civilité</strong>
                                                          </li>
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                          <li>
                                                              <strong>Téléphone</strong>
                                                          </li>
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                          <li>
                                                              <strong>Adresse actuelle</strong>
                                                          </li>
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                              </ul>
                                          <p></p>
                                      </div>
                                  </div>
                              </div>
  '''
# ---
# name: EditUserInfoViewTest.test_edit_without_title[missing title warning without phone and with birthdate]
  '''
  <div class="alert alert-warning" id="missing-infos-warning" role="status">
                                  <div class="row">
                                      <div class="col-auto pe-0">
                                          <i class="ri-information-line ri-xl text-warning"></i>
                                      </div>
                                      <div class="col">
                                          <p class="mb-2">
                                              <strong>Informations manquantes</strong>
                                          </p>
                                          <p>Une ou plusieurs informations de votre profil sont nécessaires pour utiliser votre espace candidat.</p>
                                          <p class="mb-0">
                                              Les champs suivants ne sont pas renseignés :
                                              </p><ul>
                                                  
                                                      
                                                  
                                                      
                                                          <li>
                                                              <strong>Civilité</strong>
                                                          </li>
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                          <li>
                                                              <strong>Date de naissance</strong>
                                                          </li>
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                          <li>
                                                              <strong>Adresse actuelle</strong>
                                                          </li>
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                                      
                                                  
                                              </ul>
                                          <p></p>
                                      </div>
                                  </div>
                              </div>
  '''
# ---
# name: EditUserInfoViewTest.test_update_address[user address input on error]
  '''
  <select aria-describedby="id_address_for_autocomplete_helptext" class="form-select django-select2" data-ajax--url="http://ban-api/search/" data-allow-clear="false" data-minimum-input-length="3" data-placeholder="Ex. 102 Quai de Jemmapes 75010 Paris" data-theme="bootstrap-5" id="id_address_for_autocomplete" lang="fr" name="address_for_autocomplete">
    <option value="0">37 B Rue du Général De Gaulle, 67118 Geispolsheim</option>
  
  </select>
  '''
# ---
# name: EditUserInfoViewTest.test_update_address[user address input]
  '''
  <select aria-describedby="id_address_for_autocomplete_helptext" class="form-select django-select2" data-ajax--url="http://ban-api/search/" data-allow-clear="false" data-minimum-input-length="3" data-placeholder="Ex. 102 Quai de Jemmapes 75010 Paris" data-theme="bootstrap-5" id="id_address_for_autocomplete" lang="fr" name="address_for_autocomplete">
    <option selected="" value="0">37 B Rue du Général De Gaulle, 67118 Geispolsheim</option>
  
  </select>
  '''
# ---
